# Pulser

./: .coveragerc  .flake8  .gitignore  .mypy.ini  .mypy_script  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  Composite Waveforms Tutorial.ipynb  MANIFEST.in  Makefile  Phase Shifts and Virtual Z gates.ipynb  Pulse Sequence Tutorial.ipynb  README.md  Usecase 1 -- Preparing an AF state in the Ising model.ipynb  Usecase 3 -- Variational Quantum Simulation.ipynb  VERSION.txt  __init__.py  bursts.py  channels.py  dev_requirements.txt  devices.py  examples.py  new_sampler_demo.py  packages.txt  pasqalobj.py  program.py  pulser_issue.py  pulses.py  pyproject.toml  register.py  release.md  requirements.txt  seq_drawer.py  sequences.py  setup.py  utils.py  waveforms.py
.github/: CODEOWNERS
device/: pasqalobj.py
docs/: requirements.txt
hamiltonians/: pasqalobj.py
operations/: noise_evolve.py  simulation.py  states.py
pulser/: CZ Emulation with Pulser and Qutip.ipynb  Ising_model_func.py  Notebouk.ipynb  __init__.py  _json_coders.py  _seq_drawer.py  _sim_drawer.py  _version.py  channels.py  devices.py  paramobj.py  pulse.py  register.py  sampler.py  seq_drawer.py  seqbuilder.py  sequence.py  simresults.py  simulation.py  time_benchmarks.ipynb  utils.py  variable.py  waveforms.py
pulser-core/: MANIFEST.in  README.md  requirements.txt  rtd_requirements.txt  setup.py
pulser-pasqal/: README.md  requirements.txt  rtd_requirements.txt  setup.py
pulser-simulation/: README.md  pyproject.toml  requirements.txt  rtd_requirements.txt  setup.py
(+436 files in other folders)
