[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
skip = ["__venv__", "__init__.py"]
src_paths = ["pulser-core", "pulser-simulation"]

[tool.pytest.ini_options]
filterwarnings = [
    # All warnings are turned into errors
    "error",
    # Except these particular warnings, which are ignored
    'ignore:A duration of \d+ ns is not a multiple of:UserWarning',
    'ignore:Usage of `int`s or any non-`str`types as `QubitId`s:DeprecationWarning',
    ]

[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["NPY201"]
